--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
   "name": "dharma-sandeham-app",
   "version": "1.0.0",
-  "type": "module",
-  "dependencies": {
-    "axios": "^1.6.8"
-  }
+  "type": "module"
 }
